@@ -1,13 +1,15 @@
 0.12 - 201107xx
 ===============
 
-- Python callbacks can now be used with class member functions.
 - Memory tracking is no longer compiled in the client library.
 - Add --help option to mosquitto to display usage.
 - Add --id-prefix option to clients to allow easier use with brokers that are
   using the clientid_prefix option.
 - Fix compilation on QNX.
 - Add -P as a synonym argument for --pw in the clients.
+- Fix python MosquittoMessage payload parameter. This is now returned as a
+  pointer to an array of c_uint8 values so binary data is handled correctly.
+  If a string is needed, use msg.payload_str
 
 0.11.3 - 20110707
 =================
